--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Kaiwen Shi"
 title_separator          : "-"
 name                     : &name "Kaiwen Shi"
 description              : &description "personal description"
-url                      : https://kaiwennshi.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://kaiwennshi.github.io/kaiwen/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "kaiwennshi.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
